2002-08-05  Glynn Foster <glynn.foster@sun.com>

	* configure.in: release 2.0.2 " Obsession "
	* NEWS, README: Updates for new release.

2002-08-05  Irene Ryan  <irene.ryan@sun.com>
	
	* **/help: Updates for documentation.

2002-07-25  Glynn Foster  <glynn.foster@sun.com>

	* configure.in: release 2.0.1 " Will you take me where I want to go? "
	* NEWS, README: Updates for new release.

2002-07-22  Glynn Foster  <glynn.foster@sun.com>
	
	* README: note to explain why gdialog isn't being built by 
	default.

Fri Jul 12 10:18:22 2002  George Lebl <jirka@5z.com>

	* **/*.desktop.in:  Add "Encoding=UTF-8" as per the standard,
	  the standards police kicked in my door and forced me to do this
	  I swear!

2002-07-08  Glynn Foster  <glynn.foster@sun.com>

	* configure.in: Add X checks.

2002-06-17  Glynn Foster <glynn.foster@sun.com>

	* HACKING: Add Kjartan as contact for 1.4 hacking.

2002-06-17  Glynn Foster <glynn.foster@sun.com>

	* mini-utils/idetool, splash: Really remove.

2002-06-17  Glynn Foster <glynn.foster@sun.com>

	* configure.in: release 2.0.0 " Zivot je jinde"
	* NEWS, README, THANKS, HACKING, AUTHORS: Updates for new release.

2002-06-10  Glynn Foster <glynn.foster@sun.com>

	* configure.in: release 1.109.0 " Oh so nearly, but not quite "
	* NEWS, README, THANKS: Updates for new release.
	* ChangeLog: George & Malcolm are lazy asses. Move stuff around.

2002-06-05  Yanko Kaneti <yaneti@declera.com>

	* configure.in: (ALL_LINGUAS) Added Bulgarian (bg).

2002-06-03  Glynn Foster  <glynn.foster@sun.com>

	* configure.in: release 1.108.0 " This ain't no disco "
	* NEWS, README: Updates for new release.

2002-06-02  Glynn Foster  <glynn.foster@sun.com>

	* splash/*, gpenguin/*, gsu/*, idetool/*: Cruft Removal - Part III.

2002-06-02  Glynn Foster  <glynn.foster@sun.com>

	* idl/*: Cruft Removal - Part II.

2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* configure.in: update for #83627.

2002-05-31  Glynn Foster <glynn.foster@sun.com>
