@@ -4,7 +4,7 @@ _Name=Calculator
 _Comment=Perform simple calculations
 Exec=gnome-calculator
 Icon=gnome-calc3.png
-Terminal=0
+Terminal=false
 Type=Application
 X-GNOME-DocPath=gnome-calculator/gnome-calculator.xml
-Categories=Application;Utility;
+Categories=GNOME;Application;Utility;
