@@ -4,7 +4,7 @@ _Name=Character Map
 _Comment=Insert special characters into documents
 Exec=gnome-character-map
 Icon=gnome-character-map.png
-Terminal=0
+Terminal=false
 Type=Application
 X-GNOME-DocPath=gnome-character-map/gnome-character-map.xml
-Categories=Application;Utility;
+Categories=GNOME;Application;Utility;
