@@ -4,7 +4,7 @@ _Name=Search for Files
 _Comment=Search your disk for files
 Exec=gnome-search-tool
 Icon=gnome-searchtool.png
-Terminal=0
+Terminal=false
 Type=Application
 X-GNOME-DocPath=gnome-search-tool/gnome-search-tool.xml
-Categories=Application;Core;
+Categories=GNOME;Application;Core;
