@@ -4,7 +4,7 @@ _Name=System Log
 _Comment=View the system log file
 Exec=gnome-system-log
 Icon=gnome-log.png
-Terminal=0
+Terminal=false
 Type=Application
 X-GNOME-DocPath=gnome-system-log/gnome-system-log.xml
-Categories=Application;System;
+Categories=GNOME;Application;System;
