@@ -3,8 +3,8 @@ Encoding=UTF-8
 _Name=Archive Generator
 _Comment=Create compressed archives containing many files
 Exec=archive-generator
-Terminal=0
+Terminal=false
 Icon=document-icons/gnome-compressed.png
 Type=Application
 X-GNOME-DocPath=meat-grinder/meat-grinder.xml
-Categories=Application;Utility;System;
+Categories=GNOME;Application;Utility;System;
