@@ -1,3 +1,8 @@
+2002-08-11  Ross Burton  <ross@burtonini.com>
+
+        * **/*.desktop.in: Added GNOME to the Categories keywords, and
+        changed 'Terminal=0' to 'Terminal=false' as per the spec.
+
 2002-08-05  Glynn Foster <glynn.foster@sun.com>
 
 	* configure.in: release 2.0.2 " Obsession "
